# omnifinance

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PROJECT_REVIEW.md  README.md  ROADMAP.md  app.py  home.py  pyproject.toml  remove_theme.py  requirements-api.txt  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
core/: __init__.py  action_plan.py  allocation.py  analytics.py  api.py  backtest.py  benchmarks.py  brief.py  chart_config.py  compound.py  config.py  currency.py  debt.py  education.py  exchange_rates.py  export.py  glossary.py  health.py  i18n.py  insurance.py  ledger_import.py  market_cache.py  moat.py  montecarlo.py  navigation.py  opportunity.py  page_setup.py  pdf_report.py  persistence.py  planning.py  portfolio.py  profile.py  rebalance.py  reminders.py  report_generator.py  retirement.py  review.py  runtime_checks.py  savings.py  scenarios.py  (+5 more)
docs/: HOMEPAGE_WORKFLOW_REDESIGN.md  core_api_reference.md  insurance_content_copy.md
integrated_app/: README.md  app.py  requirements.txt
integrated_app/pages/: 1_复利计算器.py  2_实时报价面板.py  3_MA交叉回测器.py  4_贷款计算器.py  5_储蓄目标计算器.py  6_预算分配建议器.py  7_退休金估算器.py
pages/: 0_决策中枢.py  10_蒙特卡洛模拟.py  11_投资组合优化器.py  12_税务计算器.py  13_债务还清规划器.py  14_教育基金规划器.py  15_房产投资分析器.py  16_外汇对冲计算器.py  17_资产再平衡模拟器.py  18_场景对比分析器.py  19_历史回测储蓄模拟.py  1_复利计算器.py  20_税务优化提款策略.py  21_财务日历.py  22_财务提醒管理.py  23_货币转换器.py  24_科学金融计算器.py  25_财务日记.py  26_股票筛选器.py  27_收支记账本.py  28_长期护城河评分器.py  29_高级资产配置.py  2_实时报价面板.py  30_复盘中心.py  3_MA交叉回测器.py  4_贷款计算器.py  5_储蓄目标计算器.py  6_预算分配建议器.py  7_退休金估算器.py  8_保险产品测算器.py  8_资产净值追踪器.py  9_资产净值追踪器.py
tests/: test_action_plan_core.py  test_allocation.py  test_analytics.py  test_backtest_core.py  test_brief_core.py  test_compound_core.py  test_debt_core.py  test_education_core.py  test_export_core.py  test_glossary.py  test_health_core.py  test_insurance_core.py  test_ledger_import.py  test_market_cache.py  test_moat.py  test_montecarlo_core.py  test_navigation_core.py  test_opportunity_core.py  test_page_setup.py  test_planning_core.py  test_portfolio_core.py  test_rebalance.py  test_reminders_core.py  test_retirement_core.py  test_review.py  test_runtime_checks_core.py  test_savings_core.py  test_scenarios_core.py  test_storage_core.py  test_storage_document.py  test_stress_core.py  test_walkforward.py
